# doc-bot

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt  streamlit_bot.py
.streamlit/: config.toml
