[tool.poetry]
name = "doc-bot"
version = "0.1.0"
description = ""
authors = ["Curtis West <curtis@curtiswest.net>"]
readme = "README.md"
packages = [{include = "doc_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.23.1"
streamlit-chat = "^0.0.2.2"
llama-index = "^0.6.19"
pypdf = "^3.9.1"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
